--- a/Project/app/src/main/res/layout/fragment_popup.xml
+++ b/Project/app/src/main/res/layout/fragment_popup.xml
@@ -8,7 +8,6 @@
 <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
-    tools:context=".fragments.PopupFragment">
     <View
         android:id="@+id/background"
         android:layout_width="match_parent"
@@ -34,7 +33,7 @@
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/background"
-        tools:src="@drawable/charger_red"/>
+        android:src="@drawable/charger_red"/>
 
     <TextView
         android:id="@+id/details_chr_name"
