--- a/Project/app/src/main/res/layout/fragment_filter.xml
+++ b/Project/app/src/main/res/layout/fragment_filter.xml
@@ -4,17 +4,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/purple_200"
     tools:context=".fragments.FilterFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="20dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:padding="20dp"
             android:orientation="vertical">
 
             <TextView
@@ -80,6 +77,5 @@
             </LinearLayout>
 
         </LinearLayout>
-    </LinearLayout>
 
 </FrameLayout>
