--- a/Project/app/src/main/res/layout/fragment_popup.xml
+++ b/Project/app/src/main/res/layout/fragment_popup.xml
@@ -18,7 +18,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:layout_marginBottom="32dp"
-            android:background="#BC8BC34A"
+            android:background="#CE4AB5C3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -31,10 +31,12 @@
             android:layout_height="212dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
+            android:contentDescription="@string/image_of_ev_charging_station"
             android:scaleType="centerCrop"
             android:src="@drawable/charger_red"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/background" />
+            app:layout_constraintTop_toTopOf="@+id/background"
+            tools:ignore="ImageContrastCheck" />
 
         <TextView
             android:id="@+id/details_chr_name"
@@ -47,7 +49,7 @@
             android:autoSizeStepGranularity="2sp"
             android:autoSizeTextType="uniform"
             android:fontFamily="@font/inria_sans_bold"
-            android:text="streetname"
+            android:text="@string/details_streetname"
             app:layout_constraintStart_toEndOf="@+id/ChargerTypeIcon"
             app:layout_constraintTop_toTopOf="@+id/background" />
 
@@ -58,8 +60,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/inria_sans"
-            android:text="Type"
-            android:textSize="20dp"
+            android:text="@string/details_type"
+            android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/ChargerTypeIcon"
             app:layout_constraintTop_toBottomOf="@+id/details_chr_name" />
 
@@ -70,8 +72,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/inria_sans"
-            android:text="price"
-            android:textSize="20dp"
+            android:text="@string/details_price"
+            android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@+id/ChargerTypeIcon"
             app:layout_constraintTop_toBottomOf="@+id/details_chr_type" />
 
@@ -80,7 +82,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="power"
+            android:text="@string/details_power"
+            android:textColor="@color/black"
             app:layout_constraintEnd_toEndOf="@+id/ChargerTypeIcon"
             app:layout_constraintStart_toStartOf="@+id/ChargerTypeIcon"
             app:layout_constraintTop_toBottomOf="@+id/ChargerTypeIcon" />
@@ -89,24 +92,28 @@
             android:id="@+id/details_route_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="go to this charge"
+            android:text="@string/details_goto_desc"
+            android:textColor="#80DEEA"
             app:layout_constraintBottom_toBottomOf="@+id/background"
             app:layout_constraintEnd_toEndOf="@+id/background"
             app:layout_constraintHorizontal_bias="0.838"
             app:layout_constraintStart_toStartOf="@+id/background"
             app:layout_constraintTop_toTopOf="@+id/background"
-            app:layout_constraintVertical_bias="0.896" />
+            app:layout_constraintVertical_bias="0.896"
+            tools:ignore="TextContrastCheck" />
 
         <ImageButton
             android:id="@+id/details_popup_close"
             android:layout_width="49dp"
             android:layout_height="52dp"
-            android:src="@drawable/sharp_add_black_36"
-            android:rotation="45"
             android:background="@null"
+            android:contentDescription="@string/details_closeButton_desc"
+            android:rotation="45"
             android:scaleType="centerCrop"
+            android:src="@drawable/sharp_add_black_36"
             app:layout_constraintEnd_toEndOf="@+id/background"
-            app:layout_constraintTop_toTopOf="@+id/background" />
+            app:layout_constraintTop_toTopOf="@+id/background"
+            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
