--- a/Project/app/src/main/res/layout/fragment_filter.xml
+++ b/Project/app/src/main/res/layout/fragment_filter.xml
@@ -18,61 +18,63 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_marginStart="16dp"
-                android:textSize="16sp"
-                android:text="Max results"/>
+                android:text="@string/filter_max_results"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/filter_results"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
                 android:inputType="number"
-                android:layout_marginStart="16dp"/>
+                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:textSize="16sp"
-                android:text="Distance"/>
+                android:text="@string/filter_distance"
+                android:textSize="16sp" />
 
             <EditText
                 android:id="@+id/filter_distance"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginStart="16dp"
                 android:inputType="number"
-                android:layout_marginStart="16dp"/>
+                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:textSize="16sp"
-                android:text="Distance Unit (Use kilometers)"/>
+                android:text="@string/filter_distance_unit_use_kilometers"
+                android:textSize="16sp" />
 
 
             <androidx.appcompat.widget.SwitchCompat
                 android:id="@+id/filter_unit"
-                android:layout_marginStart="16dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
+
                 <Button
                     android:id="@+id/filter_apply"
                     style="@android:style/Widget.Button"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
                     android:layout_marginEnd="16dp"
-                    android:text="Apply filters"
-                    />
+                    android:text="@string/filter_apply_button_desc" />
 
             </LinearLayout>
 
